--- a/references.bib
+++ b/references.bib
@@ -190,6 +190,27 @@
   publisher={Elsevier}
 }
 
+@article{Jacobson:2014:TMI,
+ author = {Jacobson, Alec and Panozzo, Daniele and Glauser, Oliver and Pradalier, C{\'e}dric and Hilliges, Otmar and Sorkine-Hornung, Olga},
+ title = {Tangible and Modular Input Device for Character Articulation},
+ journal = {ACM Trans. Graph.},
+ issue_date = {July 2014},
+ volume = {33},
+ number = {4},
+ month = jul,
+ year = {2014},
+ issn = {0730-0301},
+ pages = {82:1--82:12},
+ articleno = {82},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/2601097.2601112},
+ doi = {10.1145/2601097.2601112},
+ acmid = {2601112},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {animation system, skeletal deformation, tangible input},
+} 
+
 @inproceedings{Molino:2003:acrystalline,
     author = {Neil Molino and Robert Bridson and Joseph Teran and Ronald Fedkiw},
     title = {A crystalline, red green strategy for meshing highly deformable objects with tetrahedra},
@@ -197,6 +218,45 @@
     year = {2003},
     pages = {103--114}
 }
+
+@article{Joshi:2007:HCC,
+ author = {Joshi, Pushkar and Meyer, Mark and DeRose, Tony and Green, Brian and Sanocki, Tom},
+ title = {Harmonic Coordinates for Character Articulation},
+ journal = {ACM Trans. Graph.},
+ issue_date = {July 2007},
+ volume = {26},
+ number = {3},
+ month = jul,
+ year = {2007},
+ issn = {0730-0301},
+ articleno = {71},
+ url = {http://doi.acm.org/10.1145/1276377.1276466},
+ doi = {10.1145/1276377.1276466},
+ acmid = {1276466},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {barycentric coordinates, free form deformations, mean value coordinates, rigging},
+} 
+
+@article{Lipman:2008:GC,
+ author = {Lipman, Yaron and Levin, David and Cohen-Or, Daniel},
+ title = {Green Coordinates},
+ journal = {ACM Trans. Graph.},
+ issue_date = {August 2008},
+ volume = {27},
+ number = {3},
+ month = aug,
+ year = {2008},
+ issn = {0730-0301},
+ pages = {78:1--78:10},
+ articleno = {78},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/1360612.1360677},
+ doi = {10.1145/1360612.1360677},
+ acmid = {1360677},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+} 
 
 @inproceedings{Sifakis:2007:ACD,
  author = {Sifakis, Eftychios and Der, Kevin G. and Fedkiw, Ronald},
@@ -357,6 +417,46 @@
  %address = {New York, NY, USA},
  keywords = {blending, dual quaternions, linear combinations, rigid transformations, skinning},
 }
+
+@article{Jacobson:2012:FAS,
+ author = {Jacobson, Alec and Baran, Ilya and Kavan, Ladislav and Popovi\'{c}, Jovan and Sorkine, Olga},
+ title = {Fast Automatic Skinning Transformations},
+ journal = {ACM Trans. Graph.},
+ issue_date = {July 2012},
+ volume = {31},
+ number = {4},
+ month = jul,
+ year = {2012},
+ issn = {0730-0301},
+ pages = {77:1--77:10},
+ articleno = {77},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/2185520.2185573},
+ doi = {10.1145/2185520.2185573},
+ acmid = {2185573},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {as-rigid-as-possible, shape modeling, skinning, variational methods},
+} 
+
+@article{Gleicher:1999:AOM,
+ author = {Gleicher, Michael},
+ title = {Animation from Observation: Motion Capture and Motion Editing},
+ journal = {SIGGRAPH Comput. Graph.},
+ issue_date = {Nov.2000},
+ volume = {33},
+ number = {4},
+ month = nov,
+ year = {1999},
+ issn = {0097-8930},
+ pages = {51--54},
+ numpages = {4},
+ url = {http://doi.acm.org/10.1145/345370.345409},
+ doi = {10.1145/345370.345409},
+ acmid = {345409},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+} 
 
 @article{Neumann:2013:muscles,
  author = {Neumann, Thomas and Varanasi, Kiran and Hasler, Nils and Wacker, Markus and Magnor, Marcus and Theobalt, Christian},
@@ -771,6 +871,24 @@
   year={2010},
 }
 
+@inproceedings{Dionne:2013:GVB,
+ author = {Dionne, Olivier and de Lasa, Martin},
+ title = {Geodesic Voxel Binding for Production Character Meshes},
+ booktitle = {Proceedings of the 12th ACM SIGGRAPH/Eurographics Symposium on Computer Animation},
+ series = {SCA '13},
+ year = {2013},
+ isbn = {978-1-4503-2132-7},
+ location = {Anaheim, California},
+ pages = {173--180},
+ numpages = {8},
+ url = {http://doi.acm.org/10.1145/2485895.2485919},
+ doi = {10.1145/2485895.2485919},
+ acmid = {2485919},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {animation, deformations, skinning, voxelization},
+} 
+
 @article{Jacobson:2011:BBW,
  author = {Jacobson, Alec and Baran, Ilya and Popovi\'{c}, Jovan and Sorkine, Olga},
  title = {Bounded Biharmonic Weights for Real-time Deformation},
@@ -967,6 +1085,68 @@ year = {2005},
  %publisher = {The Eurographics Association and Blackwell Publishing Ltd},
 }
 
+@article{Le:2012:SSD,
+ author = {Le, Binh Huy and Deng, Zhigang},
+ title = {Smooth Skinning Decomposition with Rigid Bones},
+ journal = {ACM Trans. Graph.},
+ issue_date = {November 2012},
+ volume = {31},
+ number = {6},
+ month = nov,
+ year = {2012},
+ issn = {0730-0301},
+ pages = {199:1--199:10},
+ articleno = {199},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/2366145.2366218},
+ doi = {10.1145/2366145.2366218},
+ acmid = {2366218},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {block coordinate descent, geometric deformation, linear blend skinning, skinning decomposition},
+}
+
+@article{Le:2014:RAS,
+ author = {Le, Binh Huy and Deng, Zhigang},
+ title = {Robust and Accurate Skeletal Rigging from Mesh Sequences},
+ journal = {ACM Trans. Graph.},
+ issue_date = {July 2014},
+ volume = {33},
+ number = {4},
+ month = jul,
+ year = {2014},
+ issn = {0730-0301},
+ pages = {84:1--84:10},
+ articleno = {84},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/2601097.2601161},
+ doi = {10.1145/2601097.2601161},
+ acmid = {2601161},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {geometric deformation, linear blend skinning, rigging, skeleton extraction, skinning from examples},
+} 
+
+@article{James:2005:SMA,
+ author = {James, Doug L. and Twigg, Christopher D.},
+ title = {Skinning Mesh Animations},
+ journal = {ACM Trans. Graph.},
+ issue_date = {July 2005},
+ volume = {24},
+ number = {3},
+ month = jul,
+ year = {2005},
+ issn = {0730-0301},
+ pages = {399--407},
+ numpages = {9},
+ url = {http://doi.acm.org/10.1145/1073204.1073206},
+ doi = {10.1145/1073204.1073206},
+ acmid = {1073206},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {collision, compression, deformation, mean shift, skin},
+} 
+
 @inproceedings{Wang:2002:MEL,
  author = {Wang, Xiaohuan Corina and Phillips, Cary},
  title = {Multi-weight Enveloping: Least-squares Approximation Techniques for Skin Animation},
@@ -1029,6 +1209,63 @@ year = {2005},
  %publisher = {ACM},
  %address = {New York, NY, USA},
 }
+
+@article{Guay:2013:LAI,
+ author = {Guay, Martin and Cani, Marie-Paule and Ronfard, R{\'e}mi},
+ title = {The Line of Action: An Intuitive Interface for Expressive Character Posing},
+ journal = {ACM Trans. Graph.},
+ issue_date = {November 2013},
+ volume = {32},
+ number = {6},
+ month = nov,
+ year = {2013},
+ issn = {0730-0301},
+ pages = {205:1--205:8},
+ articleno = {205},
+ numpages = {8},
+ url = {http://doi.acm.org/10.1145/2508363.2508397},
+ doi = {10.1145/2508363.2508397},
+ acmid = {2508397},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {character animation, line of action, sketch-based animation},
+} 
+
+@article{Yang:2006:CSS,
+ author = {Yang, Xiaosong and Somasekharan, Arun and Zhang, Jian J.},
+ title = {Curve Skeleton Skinning for Human and Creature Characters: Research Articles},
+ journal = {Comput. Animat. Virtual Worlds},
+ issue_date = {July 2006},
+ volume = {17},
+ number = {3-4},
+ month = jul,
+ year = {2006},
+ issn = {1546-4261},
+ pages = {281--292},
+ numpages = {12},
+ url = {http://dx.doi.org/10.1002/cav.v17:3/4},
+ doi = {10.1002/cav.v17:3/4},
+ acmid = {1144471},
+ publisher = {John Wiley and Sons Ltd.},
+ address = {Chichester, UK},
+ keywords = {curve-skeleton, deformation, skeleton},
+} 
+
+@inproceedings{Forstmann:2007:DSS,
+ author = {Forstmann, Sven and Ohya, Jun and Krohn-Grimberghe, Artus and McDougall, Ryan},
+ title = {Deformation Styles for Spline-based Skeletal Animation},
+ booktitle = {Proceedings of the 2007 ACM SIGGRAPH/Eurographics Symposium on Computer Animation},
+ series = {SCA '07},
+ year = {2007},
+ isbn = {978-1-59593-624-0},
+ location = {San Diego, California},
+ pages = {141--150},
+ numpages = {10},
+ url = {http://dl.acm.org/citation.cfm?id=1272690.1272710},
+ acmid = {1272710},
+ publisher = {Eurographics Association},
+ address = {Aire-la-Ville, Switzerland, Switzerland},
+} 
 
 @inproceedings{Kavan:2009:ALN,
  author = {Kavan, Ladislav and Collins, Steven and O'Sullivan, Carol},
@@ -1130,6 +1367,27 @@ year = {2005},
  address = {New York, NY, USA},
  keywords = {local frames, mesh editing, rigid-motion invariant shape representation, shape blending},
 }
+
+@article{Chen:2012:SPS,
+ author = {Chen, Xiaobai and Saparov, Abulhair and Pang, Bill and Funkhouser, Thomas},
+ title = {Schelling Points on 3D Surface Meshes},
+ journal = {ACM Trans. Graph.},
+ issue_date = {July 2012},
+ volume = {31},
+ number = {4},
+ month = jul,
+ year = {2012},
+ issn = {0730-0301},
+ pages = {29:1--29:12},
+ articleno = {29},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/2185520.2185525},
+ doi = {10.1145/2185520.2185525},
+ acmid = {2185525},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {3D shape analysis, feature detection, shape matching},
+} 
 
 @article{Kavan:2012:EDC,
  author = {Kavan, Ladislav and Sorkine, Olga},
