--- a/theis.tex
+++ b/theis.tex
@@ -19,7 +19,7 @@
   %\markboth{\itshape Preface}{}
   %\input{preface.tex}
 
-  \tableofcontents
+  %\tableofcontents
 
   \mainmatter
 
@@ -33,7 +33,7 @@
 
   %\input{points.tex}
 
-   \input{conclusion}
+   %\input{conclusion}
 
   \bibliographystyle{bravo}
   \bibliography{references}
