--- a/theis.tex
+++ b/theis.tex
@@ -12,28 +12,18 @@
 
 \begin{document}
 
-  %\input{titlepage.tex}
+  \input{titlepage.tex}
 
   %\chapter*{Preface}
   %\pdfbookmark[0]{Preface}{dunno-preface}%
   %\markboth{\itshape Preface}{}
   %\input{preface.tex}
 
-  %\tableofcontents
+  \tableofcontents
 
   \mainmatter
 
-  \input{introduction}
-
-  \input{vriphys.tex}
-
-  %\input{volume.tex}
-
-  %\input{decomposition.tex}
-
-  %\input{points.tex}
-
-   %\input{conclusion}
+  \input{chapter1.tex}
 
   \bibliographystyle{bravo}
   \bibliography{references}
@@ -55,9 +45,5 @@
 %  \chapter*{Curriculum vitae}
 %  \addcontentsline{toc}{chapter}{Curriculum vitae}%
 %  \markboth{\itshape Curriculum vitae}{}
-
-  %\begin{otherlanguage*}{dutch}
-  %\end{otherlanguage*}
-
 
 \end{document}
