--- a/titlepage.tex
+++ b/titlepage.tex
@@ -95,8 +95,8 @@ door
 \thispagestyle{empty}%
 \noindent
 \begin{tabular}{ll}
-Promotor: & Prof.~dr.~R.C. Veltkamp\\
-Co-promotor: & Dr.~ir.~A. Egges\\
+Promotor: & Prof.~dr.~XX\\
+Co-promotor: & Dr.~XX\\
 \end{tabular}%
 
 \vfill
